feat: LangChain RAG 구현 및 하이브리드 통합
- LangChain 기반 RAGService 추가 (문서 청킹, PGVector 연동)
- 엑셀/텍스트 파일 로더 기능 추가
- ChatService에서 LangChain RAG와 SQL DataService 하이브리드 사용
- 문서 인덱싱 스크립트 추가 (index_documents_langchain.py)
- 사용 가이드 문서 추가 (LANGCHAIN_RAG_GUIDE.md)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,12 @@ openai>=2.15.0
 groq==0.4.1
 sentence-transformers==2.2.2
 
+# LangChain (RAG 강화)
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-postgres>=0.0.3
+openpyxl>=3.1.2  # 엑셀 파일 읽기용
+
 # 환경 변수 관리
 python-dotenv==1.0.0
 pydantic==2.5.0
